# Rust-Unified-Geometric-Cognition

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_reasoning.rs  curriculum_harness.rs  geometric_constraint.rs  phase2_pipeline.rs  phase50_anchor_distance.rs  phase54_energy_action.rs
scripts/: plot_curriculum.py
src/: lib.rs  main.rs
src/cognition/: constraint.rs  evaluator.rs  multiframe.rs  node.rs  scheduler.rs
src/geom/: field.rs  invariants.rs  mode.rs  space.rs
src/runtime/: determinism.rs  logging.rs  parallel.rs
tests/: phase50_anchor_distance.rs  phase54_energy_action.rs
